# project-cafe

./: .gitignore  README.md
.github/workflows/: format.yml  lint.yml
autobrew/: .gitignore  README.md  main.py  pyproject.toml
awaybrew/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
homebrew/: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json  umsgpack.pyi
homebrew/.zed/: settings.json
overbrew/: README.md  eslint.config.js  index.html  package-lock.json  package.json
overbrew/src/: App.css  App.tsx  index.css
overbrew/src/components/header/: Header.css  Header.tsx
overbrew/src/components/logo/: Logo.tsx  Logo.types.ts
overbrew/src/components/navbar/: Navbar.css  Navbar.tsx  Navbar.types.ts
overbrew/src/pages/: Home.css  Home.tsx  Login.css  Login.tsx
utils/: sender.py
