[project]
name = "awaybrew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "msgpack>=1.1.2",
    "uvicorn[standard]>=0.40.0",
    "httpx >= 0.28.1"
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
