[project]
name = "homebrew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "esptool>=5.1.0",
    "micropython-esp32-stubs>=1.27.0.post1",
    "mpremote>=1.27.0",
    "msgpack-types>=0.7.0",
]
